<resources>
    <string name="app_name">Books Information</string>
    <string name="search_book">Book Name</string>
    <string name="search_books">Search Books</string>
    <string name="by">By</string>
    <string name="publishing_year">Publishing Year:</string>
    <string name="number_of_pages">Number of Pages:</string>
    <string name="book_detail">Book Details</string>
    <string name="search_results">Search Results</string>
    <string name="world_of_books">World of Books</string>
    <string name="book_cover_image">Book Cover Image</string>
    <string name="error_message">An error occurred</string>
</resources>
